# as

./: .gitignore  Cargo.toml  Form1.cs  Program.cs  README.md  ServerManager.pas  Unit1.pas  UnitFileManager.pas  UnitGetInformation.pas  UnitHiddenVNC.pas  UnitKeylogger.pas  UnitOpenURL.pas  UnitProcessManager.pas  UnitRemoteMonitoring.pas  UnitRemoteShell.pas  UnitSendMessage.pas  all_files.txt  anti-vm.ps1  anti_debug.h  anti_sandbox.h  app.py  base64.txt  brace_check.py  build.rs  builder  builder.bat  builder.go  c.js  calc_output.txt  check_consts.rs  check_integrity.py  check_output.txt  check_syntax.py  cookies.txt  dll_b64.txt  evasion.h  example.bat  expanded.rs  file.rc  final_test  (+57 more)
BrowserExtractorCS/: BrowserExtractor.cs  BrowserExtractorCS.csproj  Debugger.cs  Extractor.cs  Program.cs  Tests.cs  Utils.cs  Win32.cs
Client/client/src/: main.cpp
GoDefender/: main.go
Recovery/: build.bat  main.cpp
Server/: NightRAT.dpr  NightRAT.dproj  NightRAT.res  ServerManager.pas  Unit1.dfm  Unit1.pas  UnitFileManager.dfm  UnitFileManager.pas  UnitGetInformation.dfm  UnitHiddenVNC.dfm  UnitHiddenVNC.pas  UnitKeylogger.dfm  UnitKeylogger.pas  UnitOpenURL.dfm  UnitOpenURL.pas  UnitProcessManager.dfm  UnitProcessManager.pas  UnitRemoteMonitoring.dfm  UnitRemoteMonitoring.pas  UnitRemoteShell.dfm  UnitRemoteShell.pas  UnitSendMessage.dfm  UnitSendMessage.pas  Utils.pas
Server/Win32/Release/: ServerManager.dcu  Unit1.dcu  UnitFileManager.dcu  UnitGetInformation.dcu  UnitHiddenVNC.dcu  UnitKeylogger.dcu  UnitOpenURL.dcu  UnitProcessManager.dcu  UnitRemoteMonitoring.dcu  UnitRemoteShell.dcu  UnitSendMessage.dcu  ncLines.dcu  ncSocketList.dcu  ncSockets.dcu  ncThreads.dcu
a-d/: Cargo.toml  lib.rs
a-d/src/: lib.rs  obfuscated.rs
a-s/: Cargo.toml
a-s/src/: lib.rs  obfuscated.rs
a-v/: Cargo.toml
a-v/src/: lib.rs  obfuscated.rs
anti-vm/: Cargo.toml
anti-vm/src/: anti-vm.rs
browser_data_extractor/src/: main.rs
browser_extractor/: Cargo.toml
chrome_key_extractor/: Cargo.toml
chrome_key_extractor/src/: lib.rs
client/: Cargo.toml  build.bat  builder.bat  client.rc  client.res
client/include/: PluginManager.hpp  base64.hpp  camera.h  config.h  filebrowser.h  rfe.h  shell.h  sysinfo.h  tasks.h  utils.h
client/plugins/FileManagerPlugin/: build.bat  main.cpp
client/plugins/HiddenVNCPlugin/: build.bat  main.cpp
client/plugins/InfoPlugin/: build.bat  main.cpp
client/plugins/KeyloggerPlugin/: build.bat  main.cpp
client/plugins/OpenURLPlugin/: build.bat  main.cpp
client/plugins/ProcessManagerPlugin/: build.bat  main.cpp
client/plugins/RecoveryPlugin/: build.bat  main.cpp  main_broken.cpp
client/plugins/RemoteMonitoringPlugin/: build.bat  main.cpp
client/plugins/RemoteShellPlugin/: build.bat  main.cpp
client/src/: MemoryLoader.cpp  PluginManager.cpp  abe_bypass.rs  bootstrapper.rs  browser.c  browser.rs  camera.c  clipboard.c  config.rc  filebrowser.c  main.c  main.cpp  main.rs  rfe.c  rfe.rs  screen.c  screen.rs  shell.c  shell.rs  sysinfo.c  sysinfo.rs  tasks.c  utils.c
client_v3/include/: browser.h  clipboard.h  screen.h  sysinfo.h  utils.h
client_v3/src/: main.c  utils.c
cpp version/injector/src/: bootstrapper.cpp  bootstrapper.h  main.cpp
cpp version/proxydll/src/: main.cpp
cpp_extractor/: README.md  main.cpp
cpp_version/: README.md  build.bat  download_deps.sh
cpp_version/includes/: base64.h
cpp_version/injector/: main.cpp
cpp_version/injector/src/: bootstrapper.cpp  bootstrapper.h  main.cpp
cpp_version/payload/: main.cpp
cpp_version/proxydll/src/: lib.cpp  main.cpp
css/: auth.css  dashboard.css  index.css  login.css
db/: users.json
html/: dashboard.html  index.html  login.html  register.html
include/: MemoryLoader.hpp  PluginManager.hpp  SysInfo.hpp
injector/: Cargo.toml
injector/src/: bootstrapper.h  bootstrapper.rs  main.cpp  main.rs
json/: config.json  private.pem  public.pem
licanseSystem/: client.go  main.go
licanseSystem/db/: keys.json
my_lib/: Cargo.toml
my_lib/src/: lib.rs
obf-helpers/: Cargo.toml
obf-helpers/src/: lib.rs
obf_macros/: Cargo.toml
obf_macros/src/: lib.rs
obfuscator/: Cargo.toml
obfuscator/src/: lib.rs
obin_generator/: Cargo.toml
obin_generator/src/: main.rs
plugins/FileManagerPlugin/: build.bat
plugins/HiddenVNCPlugin/: main.cpp
plugins/InfoPlugin/: build.bat  main.cpp
polimorphic/: Cargo.toml
polimorphic/src/: 1_lib.rs  lib.rs  pipeline_manager.rs  primitives.rs  storage_manager.rs
polimorphic/src/srcs/: lib.rs
polimorphic_core/: Cargo.toml
polimorphic_core/src/: lib.rs
proxydll/: Cargo.toml
proxydll/src/: lib.cpp  lib.rs
pwsh/: anti-vm-standalone.ps1  anti-vm.ps1  encoded-anti-vm.txt  obfuscated-anti-vm.ps1
reflective_example/: Cargo.toml
reflective_example/implant/: Cargo.toml
reflective_example/injector/: Cargo.toml
reflective_example/injector/src/: main.rs
rustdefender/: Cargo.toml
rustdefender/src/: lib.rs  obfuscated.rs
rustdie/: Cargo.toml
rustdie/src/: lib.rs
rustpolymorphic/: Cargo.toml
rustpolymorphic/src/: lib.rs
sample_dll/: Cargo.toml
sample_dll/src/: lib.rs
script/: auth.js  index.js
sqlite-amalgamation-3460100/: shell.c
src/: MemoryLoader.cpp  PluginManager.cpp  SysInfo.cpp  anti_analysis.rs  anti_vm.rs  browser.rs  camera.rs  checks.rs  clipboardmanager.rs  filebrowser.rs  information_plugin.cpp  lib.rs  main.cpp  main.rs  obf.rs  obfuscated.rs  power.rs  pre.rs  raes.rs  screen.rs  shell.rs  startup.rs  syscall.rs  syscalls.rs  sysinfo.rs  tasks.rs  test_polymorphism.rs  test_simple.rs  windows.rs
stubs/1756796658232/: XClient.exe.config.json
templates/: shellcode_template.ps1
templates/packer/: Cargo.toml
templates/rust_stub/: Cargo.toml
templates/rust_stub/a-d/: Cargo.toml  build.rs
templates/rust_stub/a-d/src/: obfuscated.rs
templates/rust_stub/a-s/src/: obfuscated.rs
templates/rust_stub/a-v/: Cargo.toml
templates/rust_stub/a-v/src/: lib.rs  obfuscated.rs
templates/rust_stub/src/: main.rs  obfuscated.rs
templates/stub/: build.rs
xenorat-hvnc/: hvnc-server.cs
(+16 files in other folders)
