[package]
name = "chrome_key_extractor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
base64 = "0.21"
rusqlite = { version = "0.29", features = ["bundled"] }
aes-gcm = "0.10"
winapi = { version = "0.3", features = [
    "libloaderapi",
    "combaseapi",
    "objbase",
    "oleauto",
    "winnt",
    "winerror",
    "wincrypt",
    "dpapi",
    "winbase",
    "errhandlingapi",
    "unknwnbase"
] }
