[package]
name = "anti-debug-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "3.0.0"
obf_macros = { path = "../obf_macros" }
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
]}