[package]
name = "a-s"
version = "0.1.0"
edition = "2021"

[dependencies]
# We still need windows-sys for essential types, and for LoadLibraryA/GetProcAddress
windows = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
] }

# --- Your existing build dependencies ---
walkdir = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
rand = "0.9" # Version locked for consistency
base45 = "3.1.0"
base32 = "0.5.1"
base64 = "0.22.1"
base85 = "2.0.0"
bs58 = "0.5.1"
proc-macro2 = "1.0"
regex = "1.10"
aes = "0.8.4"
hex = "0.4.3"
getrandom = "0.3" # locked for consistency with rand 0.9
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
# --- Your existing build dependencies ---
walkdir = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold", "visit-mut", "visit"] }
rand = "0.9" # Version locked for consistency
base45 = "3.1.0"
base32 = "0.5.1"
base64 = "0.22.1"
base85 = "2.0.0"
bs58 = "0.5.1"
proc-macro2 = "1.0"
regex = "1.10"
aes = "0.8.4"
hex = "0.4.3"
getrandom = "0.3" # locked for consistency with rand 0.9
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ---- Obfuscation / release-hardening recommended settings ----
[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
codegen-units = 1     # single codegen unit
debug = false         # no debug info
panic = "abort"       # smaller panics
strip = "symbols"     # strip symbols

[lib]
name = "a_s"
path = "src/obfuscated.rs"
