[package]
name = "anti-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
obf_macros = { path = "../obf_macros" }
windows = { version = "0.52.0", features = [
    "Win32_System_SystemInformation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Registry",
] }
