[package]
name = "anti-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-cpuid = "11.1.0"
rustpolymorphic = { path = "../rustdie" }

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp"
]
