[package]
name = "anti-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-cpuid = "11.1.0"
rand = "0.8.5"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_Performance",
    "Win32_System_Kernel",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
]

[lib]
path = "src/anti-vm.rs"
