[package]
name = "chrome_masterkey_attacher"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security_Cryptography",
] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
aes-gcm = "0.10.3"
aead = "0.5.2"
serde_json = "1.0"
chrono = "0.4.38"
rand = "0.8.5"
