[package]
name = "rust_s"
version = "0.1.0"
edition = "2021"

[dependencies]
# We still need windows-sys for essential types, and for LoadLibraryA/GetProcAddress
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_Kernel",
    "Win32_System_Memory"
] }
# --- Your existing local dependencies ---
once_cell = "1.18.0"
zeroize = "1.6"
anti_vm = { path = "a-v" }
anti_sandbox = { path = "a-s" }
anti_debug_rust = { path = "a-d" }

# --- Your existing build dependencies ---
walkdir = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold", "visit-mut", "visit"] }
rand = "0.9" # Version locked for consistency
base45 = "3.1.0"
base32 = "0.5.1"
base64 = "0.22.1"
base85 = "2.0.0"
bs58 = "0.5.1"
proc-macro2 = "1.0"
regex = "1.10"
aes = "0.8.4"
hex = "0.4.3"
getrandom = "0.3" # locked for consistency with rand 0.9
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
# --- Your existing build dependencies ---
walkdir = "2.3"
quote = "1.0"
syn = { version = "2.0", features = ["full", "fold", "visit-mut", "visit"] }
rand = "0.9" # Version locked for consistency
base45 = "3.1.0"
base32 = "0.5.1"
base64 = "0.22.1"
base85 = "2.0.0"
bs58 = "0.5.1"
proc-macro2 = "1.0"
regex = "1.10"
aes = "0.8.4"
hex = "0.4.3"
getrandom = "0.3" # locked for consistency with rand 0.9
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ---- Obfuscation / release-hardening recommended settings ----
[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
codegen-units = 1     # single codegen unit
debug = false         # no debug info
panic = "abort"       # smaller panics
strip = "symbols"     # strip symbols

[[bin]]
name = "rust_s"        # choose the binary name you want
path = "src/obfuscated.rs"   # point to the generated file
